--- a/logging/desktop/docker/docker-compose.yaml
+++ b/logging/desktop/docker/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
       - /home/zspekt/.services/logging/desktop/promtail:/etc/promtail # config
     # ports:
     #   - "1514:1514" # this is only needed if you are going to send syslogs
-    restart: unless-stopped
+    restart: always
     command: -config.file=/etc/promtail/promtail.yaml
 
     networks:
